--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,14 @@ dependencies {
     implementation project(':calendar')
     implementation 'joda-time:joda-time:2.9.7'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation project(path: ':library')
+    implementation 'com.google.code.gson:gson:2.8.5'
+
+    implementation('com.squareup.retrofit2:converter-simplexml:2.1.0') {
+        exclude group:'xpp3',module:'xpp3'
+        exclude group:'stax',module:'stax-api'
+        exclude group:'stax',module:'stax'
+    }
+    implementation'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.android.support:design:28.0.0'
 }
